--- a/dtd-macro/Cargo.toml
+++ b/dtd-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dtd-rs"
+name = "dtd-macro"
 version = "0.1.0-alpha2"
 edition = "2018"
 authors = ["songww <sww4718168@163.com>"]
@@ -11,13 +11,10 @@ license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "dtd"
+proc-macro = true
 
 [dependencies]
-dtd-macro = { version = "0.1.0-alpha2", path = "./dtd-macro" }
-dtd-parser = { version = "0.1.0-alpha2", path = "./dtd-parser" }
-
-[features]
-
-[workspace]
-members = [ "dtd-macro", "dtd-parser" ]
+dtd-parser = { version = "0.1.0-alpha2", path = "../dtd-parser" }
+proc-macro2 = { version = "1.0", features = ["nightly"] }
+quote = "1.0"
+syn = "1"
