--- a/dtd-macro/Cargo.toml
+++ b/dtd-macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dtd-macro"
-version = "0.1.0-alpha2"
+version = "0.1.0-alpha1"
 edition = "2018"
 authors = ["songww <sww4718168@163.com>"]
 description = "A DTD file parser."
@@ -8,12 +8,14 @@ documentation = "https://docs.rs/dtd-parser"
 homepage = "https://github.com/songww/dtd-rs"
 keywords = ["dtd", "xml", "document", "type", "definition"]
 license = "MIT OR Apache-2.0"
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 proc-macro = true
 
 [dependencies]
+Inflector = "0.11"
 dtd-parser = { version = "0.1.0-alpha2", path = "../dtd-parser" }
 proc-macro2 = { version = "1.0", features = ["nightly"] }
 quote = "1.0"
