--- a/dtd-macro/Cargo.toml
+++ b/dtd-macro/Cargo.toml
@@ -17,6 +17,13 @@ proc-macro = true
 [dependencies]
 Inflector = "0.11"
 dtd-parser = { version = "0.1.0-alpha3", path = "../dtd-parser" }
-proc-macro2 = { version = "1.0", features = ["nightly"] }
+proc-macro2 = { version = "1.0", features = [] }
 quote = "1.0"
 syn = "1"
+
+[build-dependencies]
+version_check = "0.9"
+
+[features]
+nightly = [ "proc-macro2/nightly" ]
+default = []
